# haskell-book-exercises

./: .gitignore  eArea3.hs  eFunctions.hs  excercise1.hs  exercise2.hs  f.hs  functionWithLet.hs  functionWithWhere.hs  greetIfCool1.hs  learn.hs  moodSwing.hs  myAbs.hs  palidrome.hs  print1.hs  print2.hs  print3.hs  print3Broken.hs  topOrLocal.hs  typeInference.hs
chapter.10/: Exercises: Understanding Folds  Rewriting functions using folds  Scans Exercises  Warm-up and review  dataProcessing.hs  factorial.hs  myAny.hs  myElem.hs  myFib.hs  myFilter.hs  myFoldl.hs  myFoldr.hs  myMap.hs  myMaximumBy.hs  myMinimumBy.hs  myOr.hs  myReverse.hs  seekritFunc.hs  squish.hs  squishMap.hs  stopVowelStop.hs
chapter.11/: Chapter Exercises  Exercise: Programmers  Exercises: Cardinality  Exercises: Dog Types  Exercises: For Example  Exercises: How Does Your Garden Grow?  Exercises: Logic Goats  Exercises: Pity the Bool  Exercises: The Quad  Exercises: Vehicles  Language exercises  asPatterns.hs  binaryTree.hs  constructDeconstruct.hs  convertQuantum.hs  farmer.hs  huttonsRazor.hs  languageExercises.hs  newType.hs  phoneExcercise.hs  quicksort.hs  types.hs  vingenere.hs
chapter.12/: finalySomethingOtherThanList.hs  itsOnlyNatural.hs  smallLibraryForEither.hs  smallLibraryForMaybe.hs  stringProcessing.hs  unfolds.hs  validatePerson.hs  validateTheWord.hs
chapter.13/: Intermission: Check your understanding  ModifyingCode.hs
chapter.13/hangman/hangman/: hangman.cabal
chapter.13/hangman/hangman/.stack-work/install/x86_64-linux/lts-7.15/8.0.1/flag-cache/: hangman-0.1.0.0  random-1.1-54KmMHXjttlERYcr1mvsAe  split-0.2.3.1-IJKK4pOCYGKud0jZImZke
chapter.13/hangman/hangman/src/: Lib.hs  Main.hs  Spec.hs
chapter.13/hello/: hello.cabal
chapter.13/hello/exe/: Main.hs
chapter.13/hello/src/: DogsRule.hs  Hello.hs
chapter.14/Chapter Exercies/using-quick-check/: using-quick-check.cabal
chapter.14/Chapter Exercies/using-quick-check/src/: Lib.hs  Main.hs
chapter.14/Chapter Exercies/validating-numbers/: validating-numbers.cabal
chapter.14/Chapter Exercies/validating-numbers/src/: Main.hs  WordNumber.hs
chapter.14/addition/: Addition.hs  addition.cabal
chapter.14/babby-first-arbitrary/: babby-first-arbitrary.cabal
chapter.14/morse/: morse.cabal
chapter.14/morse/src/: Main.hs  Morse.hs
chapter.15/: ValidatingAssociativity.hs
chapter.15/madness/: madness.hs
chapter.15/maybeAnotherMonoid/: README.md  maybeAnotherMonoid.cabal  stack.yaml
chapter.15/orphan-instance/: Listy.hs
chapter.15/semigroupExercises/: README.md  semigroupExercises.cabal
chapter.15/validatingAssociativity/: ReusingAlgebrasByAskingForAlgebras.hs  validatingAssociativity.cabal
chapter.16/: 16.10_Exercises_Instances_of_Func.hs  16.17.ChapterExercises.hs  16.4_Exercises_Be_Kind  16.7_Exercies_Heavy_Lifting.hs  ExercisePossibly.hs  MoreStructureMoreFunctors.hs  QuickCheckingFunctor.hs  ReplaceExperiment.hs  ShortExercise.hs  functors1.hs  functors2.hs  functors4.hs
chapter.17/: BadMonoid.hs  BeforeWeMoveOn.hs  ChapterExercises.hs  Combinations.hs  EitherVersusValidation.hs  ExerciseConstantInstance.hs  ExerciseFixerUpper.hs  ExerciseIdentityInstance.hs  ExercisesLookups.hs  UsingTheMaybeApplicative.hs
chapter.17/BadMonoid/: BadMonoid.cabal  README.md
chapter.17/ChapterExercises/: ChapterExercises.cabal
chapter.17/ListApplicativeExercise/: ListApplicativeExercise.cabal  README.md
chapter.17/ZipListMonoid/: README.md  ZipListMonoid.cabal
chapter.18/: ApplicationAndComposition.hs  ExampleOfListMonadInUse.hs  ExerciseEitherMonad.hs  TheAnswerIsTheExercise.hs  UsingEitherMonad.hs  UsingMaybeMonad.hs
chapter.18/BadMonad/: BadMonad.cabal  README.md
chapter.18/ChapterExercises/: README.md
chapter.19/shawty/: shawty.cabal
chapter.20/: ChapterExercises.hs  DemonstratingFoldableInstances.hs  ExercisesLibraryFunctions.hs
chapter.21/ChapterExercises/: ChapterExercises.cabal
chapter.22/: ReadingComprehension.hs  functionApplicative.hs  newBeginning.hs  warmingUp.hs
chapter.5/: Determine the type  Does it compile  Fix it  Given a type, write the function  Multiple choice  Type variable or specific type constructor  Type-Kwon-Do  Write a type signature  arith3broken.hs
chapter.6/: Day of week.hs  Does it typecheck  Exercises: Eq Instances.hs  Given a datatype declaration, what can we do  Match the types  Multiple choice  Trivial.hs  Type-Kwon-Do Two: Electric Typealoo
chapter.7/: Arith2.hs  Arith4.hs  Exercises: Case Practice  Exercises: Grab Bag  Exercises: Variety Pack  Let’s write code  Multiple choice  avgGuard.hs  registeredUser2.hs  reportBoss.hs  reportBoss2.hs
chapter.8/: 8.2 Intermission: Exercise  8.6 Chapter Exercises  dividedBy.hs  factorial.hs  fibonacci.hs  incTimes.hs  maybe.hs  mc91.hs  miltipliedBy.hs  sumNum.hs  wordNumber.hs
chapter.8/chapter.7/: Exercises: Artful Dodgy  Exercises: Guard Duty  matchingTuples1.hs
chapter.9/: 9.12 Chapter Exercises  9.6 Exercises: Thy Fearful Symmetry  Exercises: Bottom Madness  Exercises: Comprehend Thy Lists  Exercises: Filtering  Exercises: More Bottoms  Exercises: Square Cube  Intermission: Is it in normal form  Writing your own standard functions  Zipping exercises  cZipWith.hs  capitalizeAll.hs  cipher.hs  customFilter.hs  customZip.hs  enumFromTo.hs  filterUpperLetters.hs  myAny.hs  myElem.hs  myFilter.hs  myMaximumBy.hs  myMinimum.hs  myMinimumBy.hs  myOr.hs  myReverse.hs  myWords.hs  poemLines.hs  safeTail.hs  squish.hs  squishAgain.hs  squishMap.hs
(+16 files in other folders)
