name:                hangman
version:             0.1.0.0
synopsis:            Playing Hangman
description:         Please see README.md
homepage:            https://github.com/majomb
license:             BSD3
license-file:        LICENSE
author:              Marian Ban
maintainer:          example@example.com
copyright:           2017 Marian Ban
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  data/dict.txt

executable hangman
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       random,
                       split
