name:                hangman
version:             0.1.0.0
synopsis:            Playing Hangman
description:         Please see README.md
homepage:            https://github.com/majomb
license:             BSD3
license-file:        LICENSE
author:              Marian Ban
maintainer:          example@example.com
copyright:           2017 Marian Ban
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  data/dict.txt

executable hangman
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       random,
                       split
library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4 && < 5,
                      random,
                      split
  ghc-options:         -Wall
  default-language:    Haskell2010

test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      src
  main-is:             Spec.hs
  build-depends:       base >= 4 && < 5, QuickCheck, hspec, random, hangman
  ghc-options:         -Wall -fno-warn-orphans
  default-language:    Haskell2010
