name:                using-quick-check
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/using-quick-check#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable app
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4 && < 5, using-quick-check, QuickCheck, hspec
  default-language:    Haskell2010

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4 && < 5, QuickCheck, hspec
  ghc-options:         -Wall
  default-language:    Haskell2010

test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       base >= 4 && < 5, using-quick-check, QuickCheck, hspec
  ghc-options:         -Wall -fno-warn-orphans
  default-language:    Haskell2010
