name:                validating-numbers
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/validating-numbers#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     WordNumber
  build-depends:       base >= 4 && < 5
  ghc-options:         -Wall
  default-language:    Haskell2010

executable validating-numbers
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, hspec
